# CPythonTest

./: API.cpp  API.h  CMakeCache.txt  CMakeLists.txt  CPythonTest  Makefile  README.txt  Trainer.cpp  Trainer.h  cmake_install.cmake  main.cpp  test.py
